--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,7 @@
 <br>
 <hr>
 <!-- <app-servers></app-servers> -->
-<app-warning-alert></app-warning-alert>
+<app-warning-alert>
+    
+</app-warning-alert>
 <app-success-alert></app-success-alert>
