--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 <br>
 <hr>
 <!-- <app-servers></app-servers> -->
-<app-warning-alert>ssss
+<app-warning-alert>
+    Thay doi lan 1
 </app-warning-alert>
 <app-success-alert></app-success-alert> 
