--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,6 @@
 <hr>
 <!-- <app-servers></app-servers> -->
 <app-warning-alert>
-    Thay doi lan 1
+    Change it again (2nd)
 </app-warning-alert>
 <app-success-alert></app-success-alert> 
