--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,7 @@
 <!-- <div class="app-servers"></div> -->
 <!-- <div app-servers></div> -->
 <!-- <div class="app-servers"></div> -->
-<h2>This is my tutorial sưsssssdsssox</h2>
+<h2>This is my tutorial </h2>
 <br>
 <hr>
-<!-- <app-servers></app-servers> -->
-<app-warning-alert>
-    Change it again (2nd)
-</app-warning-alert>
-<app-success-alert></app-success-alert> 
+<app-server></app-server>
